# pfldp

./: PFModel.py  README  class.py  ldp.f90  learn.py  qsort_c.f90
ropp-7.0/ropp_1dvar/: COPYRIGHT  MANIFEST  Makefile  Makefile.am  Makefile.in  README  TODO  config.status  configure  configure.ac
ropp-7.0/ropp_1dvar/common/: Makefile  Makefile.am  Makefile.in  ropp_1dvar_cost.f90  ropp_1dvar_covar_bangle.f90  ropp_1dvar_covar_bg.f90  ropp_1dvar_covar_refrac.f90  ropp_1dvar_diag2roprof.f90  ropp_1dvar_diagnostics.f90  ropp_1dvar_read_config.f90  ropp_1dvar_solve.f90  ropp_1dvar_types.f90  ropp_1dvar_version.f90
ropp-7.0/ropp_1dvar/config/: Makefile  Makefile.am  Makefile.in  default_1dvar.cf  ecmwf_bangle_1dvar.cf  ecmwf_refrac_1dvar.cf  metoffice_bangle_1dvar.cf  metoffice_refrac_1dvar.cf
ropp-7.0/ropp_1dvar/data/: IT-1DVAR-01.1.nc  IT-1DVAR-01_b.nc  IT-1DVAR-01_c.nc  IT-1DVAR-01_y.nc  IT-1DVAR-04.1.nc  IT-1DVAR-04_b.nc  IT-1DVAR-04_c.nc  IT-1DVAR-04_o.nc  IT-1DVAR-04_y.nc  IT-1DVAR-05.1.nc  IT-1DVAR-05_b.nc  IT-1DVAR-05_c.nc  IT-1DVAR-05_o.nc  IT-1DVAR-05_y.nc  Makefile  Makefile.am  Makefile.in  README
ropp-7.0/ropp_1dvar/doc/: Makefile  Makefile.am  Makefile.in  rm_1dvar.tex  rm_intro.tex  robodoc.rc  romsaf_ropp_1dvar_rm.tex
ropp-7.0/ropp_1dvar/errors/: Makefile  Makefile.am  Makefile.in  README  ropp_1dvar_add_bangle_error  ropp_1dvar_add_bangle_error.f90  ropp_1dvar_add_bgr_error  ropp_1dvar_add_bgr_error.f90  ropp_1dvar_add_refrac_error  ropp_1dvar_add_refrac_error.1  ropp_bg_ecmwf_error_corr_L60.nc  ropp_bg_ecmwf_error_corr_L91.nc  ropp_bg_meto_error_corr_L50.nc  ropp_bg_meto_error_corr_L70.nc  ropp_ob_bangle_error_corr.nc  ropp_ob_refrac_error_corr.nc
ropp-7.0/ropp_1dvar/m4/: cm_compilers.m4  cm_libraries.m4
ropp-7.0/ropp_1dvar/math/: Makefile  Makefile.am  Makefile.in
ropp-7.0/ropp_1dvar/qc/: Makefile  Makefile.am  Makefile.in  ropp_qc.f90  ropp_qc_bgqc.f90  ropp_qc_cutoff.f90  ropp_qc_genqc.f90  ropp_qc_omb.f90  ropp_qc_pge.f90
ropp-7.0/ropp_1dvar/tests/: Makefile  Makefile.am  Makefile.in  README  klegend_d.pro  ncdf_getvar.pro  plot_1dvar.pro  test_1dvar.sh  test_1dvar_GRAS.sh  test_1dvar_MO.sh
ropp-7.0/ropp_1dvar/tools/: Makefile  Makefile.am  Makefile.in  ropp_1dvar_bangle.f90  ropp_1dvar_refrac  ropp_1dvar_refrac.1  ropp_1dvar_refrac.f90
ropp-7.0/ropp_fm/: MANIFEST  Makefile  Makefile.am  Makefile.in  README  TODO  config.status  configure  configure.ac
ropp-7.0/ropp_fm/bangle_1d/: Makefile  Makefile.am  Makefile.in  ropp_fm_abel.f90  ropp_fm_abel_ad.f90  ropp_fm_abel_tl.f90  ropp_fm_bangle_1d.f90  ropp_fm_bangle_1d_ad.f90  ropp_fm_bangle_1d_grad.f90  ropp_fm_bangle_1d_tl.f90
ropp-7.0/ropp_fm/bangle_2d/: Makefile  Makefile.am  Makefile.in  ropp_fm_2d_plane.f90  ropp_fm_alpha2drk.f90  ropp_fm_alpha2drk_ad.f90  ropp_fm_alpha2drk_tl.f90  ropp_fm_bangle_2d.f90  ropp_fm_bangle_2d_ad.f90  ropp_fm_bangle_2d_tl.f90  ropp_fm_gpspderivs.f90  ropp_fm_gpspderivs_ad.f90  ropp_fm_gpspderivs_tl.f90
ropp-7.0/ropp_fm/common/: Makefile  Makefile.am  Makefile.in  ropp_fm.f90  ropp_fm_compress.f90  ropp_fm_compress_ad.f90  ropp_fm_compress_tl.f90  ropp_fm_constants.f90  ropp_fm_copy.f90  ropp_fm_free.f90  ropp_fm_obs2obs.f90  ropp_fm_obs2roprof.f90  ropp_fm_roprof2obs.f90  ropp_fm_roprof2state.f90  ropp_fm_set_units.f90  ropp_fm_state2roprof.f90  ropp_fm_state2state.f90  ropp_fm_types.f90  ropp_fm_version.f90
ropp-7.0/ropp_fm/data/: ECMWF_10_OCCS.nc  ECMWF_2D_DATA.nc  FASCOD_Scenarios.nc  FASCOD_non_ideal.nc  Makefile  Makefile.am  Makefile.in  README  bgr20090401_000329_M02_2030337800_N0007_XXXX.nc  bgr20090401_000601_M02_1200337800_N0007_XXXX.nc  bgr20090401_000630_M02_2180337800_N0007_XXXX.nc  bgr20090401_000758_M02_2210337801_N0007_XXXX.nc  bgr20090401_000849_M02_2060337801_N0007_XXXX.nc  bgr20090401_multi.nc  ecmwf_20020901000213_chmp_u999_meto.nc  ecmwf_20020901002459_chmp_u999_meto.nc  ecmwf_20020901003358_chmp_u999_meto.nc  ecmwf_20020901004032_chmp_u999_meto.nc  ecmwf_20020901004925_chmp_u999_meto.nc  ecmwf_20020901005119_chmp_u999_meto.nc  ecmwf_20020901005632_chmp_u999_meto.nc  ecmwf_multi_20020901_1h_chmp_meto.nc
ropp-7.0/ropp_fm/doc/: Makefile  Makefile.am  Makefile.in  rm_fm.tex  robodoc.rc  romsaf_ropp_fm_rm.tex
ropp-7.0/ropp_fm/m4/: cm_compiler_defaults.m4  cm_libraries.m4
ropp-7.0/ropp_fm/math/: Makefile  Makefile.am  Makefile.in
ropp-7.0/ropp_fm/model_ecmwf/: Makefile  Makefile.am  Makefile.in  ropp_fm_state2state_ecmwf.f90  ropp_fm_state2state_ecmwf_ad.f90  ropp_fm_state2state_ecmwf_tl.f90
ropp-7.0/ropp_fm/model_meto/: Makefile  Makefile.am  Makefile.in  ropp_fm_state2state_meto.f90  ropp_fm_state2state_meto_ad.f90  ropp_fm_state2state_meto_tl.f90
ropp-7.0/ropp_fm/refrac_1d/: Makefile  Makefile.am  Makefile.in  ropp_fm_refrac_1d.f90  ropp_fm_refrac_1d_ad.f90  ropp_fm_refrac_1d_grad.f90  ropp_fm_refrac_1d_tl.f90
ropp-7.0/ropp_fm/tests/: ECMWF_10_OCCS_out.nc  Makefile  Makefile.am  Makefile.in  close_jpgfile.pro  ncdf_getvar.pro  plot_fm.pro  plot_fm_twod.pro  ropp_fm_bgr20090401_single.nc  t_fascod.f90  t_fascod_ad.f90  t_fascod_tl  t_fascod_tl.f90  t_twodad  t_twodad.f90  t_twodop.f90  t_twodtl  test.nc  test_fm_2D.sh  test_fm_GRAS.sh
ropp-7.0/ropp_fm/tools/: Makefile  Makefile.am  Makefile.in  ropp_fm_bg2ro_1d.f90  ropp_fm_bg2ro_2d.1  ropp_fm_bg2ro_2d.f90
ropp-7.0/ropp_io/: MANIFEST  Makefile  Makefile.am  Makefile.in  README  README.unix  TODO  aclocal.m4  config.status  configure  configure.ac
ropp-7.0/ropp_io/bufr/: Makefile  Makefile.am  Makefile.in  bufr2ropp_mod.f90  bufrutils.f90  convertcodes.f90  gtshdrs.f90  ropp2bufr_mod.f90  roppbufrcodes.nl
ropp-7.0/ropp_io/common/: Makefile  Makefile.am  Makefile.in  ropp_io_version.f90
ropp-7.0/ropp_io/contrib/: Makefile  Makefile.am  Makefile.in
ropp-7.0/ropp_io/data/: README  (+23 more)
ropp-7.0/ropp_pp/: MANIFEST  Makefile  Makefile.am  Makefile.in  README  README.cygwin  aclocal.m4  config.status  configure  configure.ac
ropp-7.0/ropp_utils/: AUTHORS  MANIFEST  Makefile  Makefile.am  Makefile.in  README  README.unix  aclocal.m4  config.status  configure  configure.ac
(+2589 files in other folders)
