# $Id: $
#
# Makefile.am for ropp_1dvar/config
# ================================

# 1. Subdirectories
# -----------------

SUBDIRS = 

# 2. Sample configuration files
# -----------------------------

EXTRA_DIST = 	default_1dvar.cf 		\
		ecmwf_bangle_1dvar.cf 		\
		ecmwf_refrac_1dvar.cf 		\
		metoffice_bangle_1dvar.cf    	\
		metoffice_refrac_1dvar.cf



