# $Id: $
#
# Makefile.am for ropp_1dvar/data
# ===============================

# 1. Subdirectories
# -----------------

SUBDIRS = 

# 2. Sample background, errcov & observation & data
# --------------------------------------------------

EXTRA_DIST = README             \
             IT-1DVAR-01_b.nc   \
             IT-1DVAR-01_c.nc   \
             IT-1DVAR-01_y.nc   \
	     IT-1DVAR-04_b.nc   \
	     IT-1DVAR-04_c.nc   \
	     IT-1DVAR-04_y.nc   \
	     IT-1DVAR-04_o.nc   \
	     IT-1DVAR-05_b.nc   \
	     IT-1DVAR-05_c.nc   \
	     IT-1DVAR-05_y.nc   \
	     IT-1DVAR-05_o.nc   



